// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message rendering works for messages with footers 1`] = `
Object {
  "color": "#24292f",
  "footer": "Hello Footer",
  "footer_icon": "https://github.githubassets.com/favicon.ico",
}
`;

exports[`Message rendering works for messages without footer 1`] = `
Object {
  "color": "#24292f",
}
`;
